this should fix overflow issues

--- a/src/components/ComponentStyle.css
+++ b/src/components/ComponentStyle.css
@@ -622,3 +622,7 @@ input.largeCheckbox{
 .topPadding{
 	height: 4vh;
 }
+
+.forTopRightBar{
+	height: 46vh;
+}
